--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="./assets/logo.svg" alt="logo rocket nfts" />
+        <img src="./assets/eatsforyo.png" alt="logo rocket nfts" />
       </div>
       <nav class="navbar">
         <ul class="menu">
