clean code and start code

--- a/index.html
+++ b/index.html
@@ -1,352 +1,55 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Rocket NFTs</title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eats For You Calculadora</title>
+</head>
+<body>
     <header>
-      <div class="logo">
-        <img src="./assets/eatsforyo.png" alt="logo rocket nfts" />
-      </div>
-      <nav class="navbar">
-        <ul class="menu">
-          <li><a href="#">Comprar NFT</a></li>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">FAQ</a></li>
-        </ul>
-      </nav>
-      <div class="button">
-        <button>
-          <img src="./assets/logo_MetaMask.svg" alt="logo_MetaMask" /> Conectar
-          carteira
-        </button>
-      </div>
+        <img src="./assets/eatsforyo.png" alt="Logo Eats For You">
+        MENU
+        <br>
+        #100MilSemFome SOBRE QUERO VENDER QUERO COMPRAR ALELO IMPRENSA FAQ CONTATO 
+        <br>
+        FIM DE MENU
     </header>
+    <main>
+        <h1>Quem eh a Eats For You ?</h1>
+        Somos uma ESG Foodtech e temos um marketplace de refeicoes caseiras e oferecemos
+        alimentacao de qualidade, gerando renda formal por meio de uma inclusao produtiva e fomento do 
+        pensamento empreendedor.
+        <br>
+        <br>
+        Possuimos +150 Toneladas de alimentos produzidos 
+        <br>
+        Ja vendemos +260 mil refeicoes Eats
+        <br>
+        Geramos +2,2 Milhoes de renda formal para nossa base empreendedora
+        <br>
+        Ate agora estamos operando em 4 estados diversos em nosso pais.
+        <h2>Como podemos te ajudar ?</h2>
 
-    <main class="container">
-      <section class="main-1">
-        <div class="group-1">
-          <p>
-            Mercado digital para colecionáveis em<br />
-            criptos e tokens não fungível (NFT).<br />Compre, venda e descubra
-            ativos digitais<br />
-            exclusivos para você.
-          </p>
-          <div class="avatars">
-            <a href="#artists">
-              <img src="./assets/group-avarts.png" alt="avatars" />
-              <p><span class="bold">+10</span><br />Artistas selecionados</p>
-            </a>
-          </div>
-        </div>
-        <h1 class="title">
-          Descubra a verdadeira <br />arte digital e<br />
-          colecione diversas<br />
-          <span class="color-text">NFTs</span>
-        </h1>
-        <div class="badge">
-          <img src="./assets/badge.svg" alt="badge - explore a arte" />
-        </div>
-      </section>
-      <section class="gallery">
-        <ul class="gallery-1">
-          <li>
-            <a href="#"
-              ><img src="./assets/galeria-1.png" alt="nft-astronauta"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./assets/galeria-2.png" alt="nft-astronauta"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./assets/galeria-3.png" alt="nft-astronauta"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./assets/galeria-4.png" alt="nft-astronauta"
-            /></a>
-          </li>
-        </ul>
-        <ul class="gallery-2">
-          <li>
-            <a href="#"
-              ><img src="./assets/galeria-5.png" alt="nft-astronauta"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./assets/galeria-6.png" alt="nft-astronauta"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./assets/galeria-7.png" alt="nft-astronauta"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./assets/galeria-8.png" alt="nft-astronauta"
-            /></a>
-          </li>
-        </ul>
-      </section>
-      <section class="main-2">
-        <div class="aside">
-          <div class="amount arts">
-            <h1>10k+</h1>
-            <p>Artes</p>
-          </div>
-          <div class="amount sales">
-            <h1>200+</h1>
-            <p>Vendas</p>
-          </div>
-          <div class="amount artists">
-            <h1>20</h1>
-            <p>Artistas</p>
-          </div>
-        </div>
-        <div class="info-and-banner">
-          <div class="text-group">
-            <div class="text-1">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi,
-                veniam provident similique labore
-                <span>assumenda</span> mollitia reiciendis, doloremque odio
-                aspernatur soluta corrupti modi.<br />
-              </p>
-              <a href="#">Lorem Ipsum</a>
-            </div>
-            <div class="text-2">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi,
-                veniam provident similique labore
-                <span>assumenda</span> mollitia reiciendis, doloremque odio
-                aspernatur soluta corrupti modi.<br />
-              </p>
-              <a href="#">Lorem Ipsum</a>
-            </div>
-          </div>
-          <div class="banner">
-            <img src="./assets/banner.png" alt="banner" />
-          </div>
-        </div>
-      </section>
+        <h3>Informacoes necessarias para calculo</h3>
 
-      <section class="week-favorites">
-        <div class="title">
-          <h1><span>Populares</span> da semana</h1>
-        </div>
-
-        <div class="pictures">
-          <div class="pictures-column-1">
-            <div id="astronauta-1">
-              <div class="name-img">
-                <p class="name-picture">Astronauta 1</p>
-                <img src="./assets/arrow-white.svg" alt="arrow white" />
-              </div>
-              <div class="artist-and-price">
-                <p class="artist-name">Mayk Brito</p>
-                <p class="price">1.50 RKT</p>
-              </div>
-              <div class="astronauta-1">
-                <img src="./assets/astronauta 1.png" alt="astronauta 1" />
-              </div>
-            </div>
-            <div id="astronauta-3">
-              <div class="name-img">
-                <p class="name-picture">Astronauta 3</p>
-                <img src="./assets/arrow-white.svg" alt="arrow white" />
-              </div>
-              <div class="artist-and-price">
-                <p class="artist-name">João Inácio (Biro)</p>
-                <p class="price">3.75 RKT</p>
-              </div>
-              <div class="astronauta-3">
-                <img src="./assets/astronauta-3.png" alt="astronauta 3" />
-              </div>
-            </div>
-          </div>
-          <div class="pictures-column-2">
-            <div id="astronauta-2">
-              <div class="name-img">
-                <p class="name-picture">Astronauta 2</p>
-                <img src="./assets/arrow-white.svg" alt="arrow white" />
-              </div>
-              <div class="artist-and-price">
-                <p class="artist-name">Jakeliny Gracielly</p>
-                <p class="price">2.0 RKT</p>
-              </div>
-              <div class="astronauta-2">
-                <img src="./assets/astronauta-2.png" alt="astronauta 2" />
-              </div>
-            </div>
-            <div id="astronauta-4">
-              <div class="name-img">
-                <p class="name-picture">Astronauta 4</p>
-                <img src="./assets/arrow-white.svg" alt="arrow white" />
-              </div>
-              <div class="artist-and-price">
-                <p class="artist-name">Tamires Santos</p>
-                <p class="price">4.30 RKT</p>
-              </div>
-              <div class="astronauta-4">
-                <img src="./assets/astronauta-4.png" alt="astronauta 4" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="best-artists" id="artists">
-        <div class="title">
-          <h1>Melhores <span>artistas</span></h1>
-        </div>
-
-        <div class="artist-list">
-          <ul>
-            <li class="card">
-              <div><img src="./assets/artista-1.png" alt="Mayk Brito" /></div>
-              <div>
-                <p>Mayk Brito</p>
-                <p>80 Fotografias</p>
-              </div>
-            </li>
-            <li class="card orange">
-              <div>
-                <img src="./assets/artista-2.png" alt="Jackeliny Gracielly" />
-              </div>
-              <div>
-                <p>Jakeliny G.</p>
-                <p>99 Fotografias</p>
-              </div>
-            </li>
-            <li class="card">
-              <div><img src="./assets/artista-3.png" alt="João Inácio" /></div>
-              <div>
-                <p>João I. (Biro)</p>
-                <p>50 Fotografias</p>
-              </div>
-            </li>
-            <li class="card">
-              <div>
-                <img src="./assets/artista-4.png" alt="Tamires Santos" />
-              </div>
-              <div>
-                <p>Tamires Santos</p>
-                <p>43 Fotografias</p>
-              </div>
-            </li>
-            <li class="card">
-              <div><img src="./assets/artista-5.png" alt="Ana Silva" /></div>
-              <div>
-                <p>Ana Silva</p>
-                <p>28 Fotografias</p>
-              </div>
-            </li>
-            <li class="card">
-              <div><img src="./assets/artista-6.png" alt="Diego F." /></div>
-              <div>
-                <p>Diego F.</p>
-                <p>20 Fotografias</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-
-        <div class="all-artists">
-          <a href="#">Veja todos os artistas</a
-          ><img src="./assets/arrow-orange.svg" alt="arrow orange" />
-        </div>
-      </section>
+        Contato Comercial (Responsavel) Alelo:
+        Nome da Empresa:
+        Nome para Contato:
+        Telefone:
+        E-mail:
+        Endereco:
+        Quantidade de Funcionarios total:
+        Quantidade de Funcionarios presencial: 
+        Valor do Beneficio
+        Prazo para implementacao:
+        Possui oferta de refeitorio no local ?
+        A regiao possui oferta de Delivery ou restaurantes ?
     </main>
     <footer>
-      <div class="top-footer">
-        <img src="./assets/logo.svg" alt="logo_rocket" />
-        <a href="#" class="orange-button"
-          ><img src="./assets/arrow-black.svg" alt=""
-        /></a>
-      </div>
-
-      <div class="mid-footer">
-
-        <div class="register">
-          <p>Fique por dentro de<br><span>todas as novidades</span></p>
-          <div class="input">
-            <input type="email" name="email" id="email" placeholder="nft@rocketseat.com.br"/>
-            <button class="white-button">Enviar</button>
-          </div>
-        </div>
-
-        <div class="infos">
-
-          <div class="company">
-            <div class="subtitle"><span>Empresa</span></div>
-            <ul>
-              <li><a href="#">Sobre</a></li>
-              <li><a href="#">Serviços</a></li>
-              <li><a href="#">Time</a></li>
-              <li><a href="#">Carreira</a></li>
-            </ul>
-          </div>
-
-          <div class="map">
-            <div class="subtitle"><span>Mapa</span></div>
-            <ul>
-              <li><a href="#">Galeria</a></li>
-              <li><a href="#">Populares</a></li>
-              <li><a href="#">Vendas</a></li>
-              <li><a href="#">Contato</a></li>
-            </ul>
-          </div>
-
-          <div class="links">
-            <div class="subtitle"><span>Links</span></div>
-            <ul>
-              <li><a href="#">FAQs</a></li>
-              <li><a href="#">Termos</a></li>
-              <li><a href="#">Política</a></li>
-              <li><a href="#">Ajuda</a></li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="bottom-footer">
-        <div class="url">
-          <p>www.rocketseat.com.br</p>
-        </div>
-
-        <div class="contacts">
-          <div class="icon instagram">
-            <a href=""><img src="./assets/instagram.svg" alt="logo instagram"></a>
-          </div>
-          <div class="icon youtube">
-            <a href=""><img src="./assets/youtube.svg" alt="logo youtube"></a>
-          </div>
-          <div class="icon twitter">
-            <a href=""><img src="./assets/twitter.svg" alt="logo twitter"></a>
-          </div>
-          <div class="icon email">
-            <a href=""><img src="./assets/email.svg" alt="logo email"></a>
-          </div>
-        </div>
-
-      </div>
+        <h1>Fale Conosco</h1>
+        <p>pE-mail: bruno.caraca@eatsforyou.com.br</p>
+        <p>Whatssap: (11)...</p>        
     </footer>
-  </body>
+</body>
 </html>
