--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </p>
 
         <h3>EATS LOCKER</h3>
-        <img src="/assets/Imagens-com-fundo/eats-locker.png"/>
+        <img src="/assets/Imagens-com-fundo/eats-locker.png" />
         <p>
             Um equipamento que garante o
             armazenamento individual das
@@ -130,25 +130,49 @@
         <h3>Informacões necessarias para o cálculo</h3>
         <form>
 
-       <label> Contato Comercial </label>
-        <input type ="number" placeholder="(DD)00000-0000">  
-        (Responsavel) Alelo:
-
-        <label>Nome da Empresa:</label>
-        <input type="text" > 
-       
-       <label> Nome para Contato:</label>
-       <input type="text" id="NomeContato"/>
-        Telefone:
-        E-mail:
-        Endereco:
-        Quantidade de Funcionarios total:
-        Quantidade de Funcionarios presencial:
-        Valor do Beneficio
-        Prazo para implementacao:
-        Possui oferta de refeitorio no local ?
-        A regiao possui oferta de Delivery ou restaurantes ?
-    </form>
+            <label> Contato Comercial </label>
+            <input type="tel" placeholder="(DD)00000-0000" id="ContatoComercial">
+            <br>
+            <label> (Responsavel) Alelo:</label>
+            <input type="text" id="AleloName" />
+            <br>
+            <label>Nome da Empresa:</label>
+            <input type="text" id="NomeEmpresa">
+            <br>
+            <label> Nome para Contato:</label>
+            <input type="tel" id="NomeContato" />
+            <br>
+            <label>Telefone:</label>
+            <input type="tel" id="Telefone">
+            <br>
+            <label>E-mail:</label>
+            <input type="email" id="Email" />
+            <br>
+            <label>Endereço:</label>
+            <input type="text" id="Endereco" />
+            <br>
+            <label>Quantidade de Funcionarios total:</label>
+            <input type="number" id="QtdFuncionarios" />
+            <br>
+            <label>Quantidade de Funcionarios presencial:</label>
+            <input type="number" id="QtsPresencial" />
+            <br>
+            <label> Valor do Beneficio </label>
+            <input type="number" id="ValBeneficio" />
+            <br>
+            <label> Prazo para implementação:</label>
+            <input type="date" id="PrazoImplemetacao">
+            <br>
+            <label> Possui oferta de refeitorio no local ?</label>
+            <br>
+            <input type="checkbox" name="Sim" id="OfertaRefeitorioSim">Sim
+            <input type="checkbox" name="Não" id="OfertaRefeitoriNao">Não
+            <br>
+            <label> A regiao possui oferta de Delivery ou restaurantes ?</label>
+            <br>
+            <input type="checkbox" name="Delivery" id="OfertaDelivery">Delivery
+            <input type="checkbox" name="Restaurante" id="OfertaRestaurante" /> Restaurante
+        </form>
     </main>
     <footer>
         <h1>Fale Conosco</h1>
