--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     </header>
     <main>
         <h1>Quem é a Eats For You ?</h1>
-            <p>Somos uma ESG Foodtech e temos um marketplace de refeicoes caseiras e oferecemos
-            alimentacao de qualidade, gerando renda formal por meio de uma inclusao produtiva e fomento do
+            <p>Somos uma ESG Foodtech e temos um marketplace de refeicões caseiras e oferecemos
+            alimentacão de qualidade, gerando renda formal por meio de uma inclusao produtiva e fomento do
             pensamento empreendedor.</p>
             <br>
                 <p>Possuimos +150 Toneladas de alimentos produzidos</p>
             <br>
-                <p>Já vendemos +260 mil refeicoes Eats</p>
+                <p>Já vendemos +260 mil refeicões Eats</p>
             <br>
-                <p>Geramos +2,2 Milhoes de renda formal para nossa base empreendedora.</p>
+                <p>Geramos +2,2 Milhões de renda formal para nossa base empreendedora.</p>
             <br>
-                <p>Até agora estamos operando em 4 estados diversos em nosso pais.</p>
+                <p>Até o momento, estamos operando em 4 estados: Mato Grosso, São Paulo, Paraná e Minas Gerais.</p>
 
         <h1>SOLUÇÕES EATS FOR YOU</h1>
             <p>A Eats for You consegue atender empresas e seus colaboradores das seguintes formas:</p>
