--- a/index.html
+++ b/index.html
@@ -6,37 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1. 0">
     <link href="style.css" rel="stylesheet" />
-
+    <!--Imports fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,400&display=swap" rel="stylesheet">
 
     <title>Eats For You Calculadora</title>
 </head>
 
 <body>
     <header>
-        <img src="./assets/eatsforyo.png" alt="Logo Eats For You">
+        <img class="Imgmenu" src="./assets/eatsforyo.png" alt="Logo Eats For You">
         <br>
 
-        <navigator>MENU
+        <navigator>
         </navigator>
 
         <br>
-        #100MilSemFome SOBRE QUERO VENDER QUERO COMPRAR ALELO IMPRENSA FAQ CONTATO
-        <br>
-        FIM DE MENU
+        <ul>
+
+            <li><a href="https://www.eatsforyou.com.br/100milsemfome">#100MilSemFome</a></li>
+            <li>SOBRE</li>
+            <li> <a href="https://www.eatsforyou.com.br/quero-vender">QUERO VENDER </a></li>
+            <li> <a href="https://www.eatsforyou.com.br/quero-comprar"> QUERO COMPRAR</a> </li>
+            <li> ALELO </li>
+            <li><a href="https://www.eatsforyou.com.br/imprensa"> IMPRENSA </a></li>
+            <li> <a href="https://www.eatsforyou.com.br/faq">FAQ</a></li> 
+            <li> <a href ="https://www.eatsforyou.com.br" alt="Contato">CONTATO</a></li>
+        </ul>
+
     </header>
     <main>
         <h1>Quem é a Eats For You ?</h1>
-            <p>Somos uma ESG Foodtech e temos um marketplace de refeicões caseiras e oferecemos
+        <p>Somos uma ESG Foodtech e temos um marketplace de refeicões caseiras e oferecemos
             alimentacão de qualidade, gerando renda formal por meio de uma inclusao produtiva e fomento do
             pensamento empreendedor.</p>
-            <br>
-                <p>Possuimos +150 Toneladas de alimentos produzidos</p>
-            <br>
-                <p>Já vendemos +260 mil refeicões Eats</p>
-            <br>
-                <p>Geramos +2,2 Milhões de renda formal para nossa base empreendedora.</p>
-            <br>
-                <p>Até o momento, estamos operando em 4 estados: Mato Grosso, São Paulo, Paraná e Minas Gerais.</p>
+        <br>
+        <p>Possuimos +150 Toneladas de alimentos produzidos</p>
+        <br>
+        <p>Já vendemos +260 mil refeicões Eats</p>
+        <br>
+        <p>Geramos +2,2 Milhões de renda formal para nossa base empreendedora.</p>
+        <br>
+        <p>Até o momento, estamos operando em 4 estados: Mato Grosso, São Paulo, Paraná e Minas Gerais.</p>
 
         <h1>SOLUÇÕES EATS FOR YOU</h1>
         <p>A Eats for You consegue atender empresas e seus colaboradores das seguintes formas:</p>
