add flex box in some items

--- a/index.html
+++ b/index.html
@@ -37,27 +37,30 @@
 
     </header>
     <main>
+        <h1>Quem é a Eats For You ?</h1>
         <div class="container-about">
-            <h1>Quem é a Eats For You ?</h1>
-            <p>Somos uma ESG Foodtech e temos um marketplace de refeicões caseiras e oferecemos
-                alimentacão de qualidade, gerando renda formal por meio de uma inclusao produtiva e fomento do
-                pensamento empreendedor.</p>
-            <br>
-            <p>Possuimos +150 Toneladas de alimentos produzidos</p>
-            <br>
-            <p>Já vendemos +260 mil refeicões Eats</p>
-            <br>
-            <p>Geramos +2,2 Milhões de renda formal para nossa base empreendedora.</p>
-            <br>
-            <p>Até o momento, estamos operando em 4 estados: Mato Grosso, São Paulo, Paraná e Minas Gerais.</p>
+            <div class="about-text">
+                <p>Somos uma ESG Foodtech e temos um marketplace de refeicões caseiras e oferecemos
+                    alimentacão de qualidade, gerando renda formal por meio de uma inclusao produtiva e fomento do
+                    pensamento empreendedor.</p>
+                <p>Possuimos +150 Toneladas de alimentos produzidos</p>
+                <p>Já vendemos +260 mil refeicões Eats</p>
+                <p>Geramos +2,2 Milhões de renda formal para nossa base empreendedora.</p>
+                <p>Até o momento, estamos operando em 4 estados: Mato Grosso, São Paulo, Paraná e Minas Gerais.</p>
+            </div>
+            <div class="about-img">
+                <img src="./assets/mao-eats.webp" alt="">
+            </div>
         </div>
 
+        <h1>SOLUÇÕES EATS FOR YOU</h1>
+        <h3>A Eats for You consegue atender empresas e seus colaboradores das seguintes formas:</h3>
+              
         <div class="container-solutions">
             <div class="solutions-delivery">
-                <h1>SOLUÇÕES EATS FOR YOU</h1>
-                <p>A Eats for You consegue atender empresas e seus colaboradores das seguintes formas:</p>
 
                 <h2>DELIVERY</h2>
+                
                 <h3>EATS BAG</h3>
                 <img src="./assets/Imagens-com-fundo/Eats-bag.png" alt="Eats bag" />
                 <p>
