--- a/index.html
+++ b/index.html
@@ -57,11 +57,23 @@
         <h3>A Eats for You consegue atender empresas e seus colaboradores das seguintes formas:</h3>
 
         <div class="container-solutions">
+            <h2>DELIVERY</h2>
+            <div class="Onetitle">
+            <div class="TitleDelivery">
+                <h3>EATS BAG</h3>
+            </div>
+            <div class="TitleDelivery">
+                <h3>BAG TOTEM</h3>
+            </div>
+            <div class="TitleDelivery">
+                <h3>EATS LOCKER</h3>
+            </div>
+        </div>
             <div class="solutions-delivery">
 
-                <h2>DELIVERY</h2>
 
-                <h3>EATS BAG</h3>
+
+
                 <img src="./assets/Imagens-com-fundo/Eats-bag.png" alt="Eats bag" />
                 <p>
                     Entrega de refeições pré
@@ -71,7 +83,7 @@
                     parceiro Alelo.
                 </p>
 
-                <h3>BAG TOTEM</h3>
+
                 <img src="./assets/Imagens-com-fundo/bag-totem.png" alt="Bag Totem" />
                 <p>
                     Um totem para acomodar o sistema
@@ -80,7 +92,7 @@
                     sistema auto servive.
                 </p>
 
-                <h3>EATS LOCKER</h3>
+
                 <img src="/assets/Imagens-com-fundo/eats-locker.png" />
                 <p>
                     Um equipamento que garante o
@@ -89,29 +101,16 @@
                     temperatura adequada, com trava de
                     segurança e sistema auto service.
                 </p>
-                <h3>AQUECIDAS</h3>
 
-                <p>Máquina de venda automática modelo PASTRU que mantêm as refeições aquecidas. Ideal para parceiros
-                    com grande fluxo de colaboradores.</p>
-
-                <h3>CONGELADAS</h3>
-
-                <p>Máquina de venda automática que mantêm as
-                    refeições congeladas. Ideal para parceiros com fluxo médio de colaboradores e/ou público e queiram
-                    garantir cardápio variado.</p>
-
-                <h3>REFRIGERADAS</h3>
-
-                <p>Máquina de venda automática modelo PASTRU que mantêm as refeições refrigerada, ideal para parceiros
-                    com fluxo médio de colaboradores e/ou público e
-                    queiram servir lanches, snacks, sucos, sobremesas e
-                    saladas.
             </div>
 
+            <h2>PLUG N'PLAY</h2>
             <div class="solutions-plug">
-                <h2>PLUG N'PLAY</h2>
 
-                <h3>FOODBIKE</h3>
+
+                <div class="H3solution">
+                    <h3>FOODBIKE</h3>
+                </div>
                 <img src="./assets/Imagens-com-fundo/foodbike.png" atl="Food Bike" />
                 <br>
                 <p>Ideal para parceiros que tenham
@@ -143,63 +142,30 @@
 
                 <h2>EATS MACHINES</h2>
                 <img src="assets/Imagens-com-fundo/eats-machine.png" alt="Eat´s machine" />
+                <h3>AQUECIDAS</h3>
 
+                <p>Máquina de venda automática modelo PASTRU que mantêm as refeições aquecidas. Ideal para parceiros
+                    com grande fluxo de colaboradores.</p>
+
+                <h3>CONGELADAS</h3>
+
+                <p>Máquina de venda automática que mantêm as
+                    refeições congeladas. Ideal para parceiros com fluxo médio de colaboradores e/ou público e queiram
+                    garantir cardápio variado.</p>
+
+                <h3>REFRIGERADAS</h3>
+
+                <p>Máquina de venda automática modelo PASTRU que mantêm as refeições refrigerada, ideal para parceiros
+                    com fluxo médio de colaboradores e/ou público e
+                    queiram servir lanches, snacks, sucos, sobremesas e
+                    saladas.
 
                 </p>
             </div>
 
         </div>
-
-        <div class="container-form">
-            <h2>Como podemos te ajudar ?</h2>
-
-
-            <h3>Informacões necessrias para o cálculo</h3>
-
-            <form>
-                <label> Contato Comercial </label>
-                <input type="tel" placeholder="(DD)00000-0000" id="ContatoComercial">
-                <br>
-                <label> (Responsavel) Alelo:</label>
-                <input type="text" id="AleloName" />
-                <br>
-                <label>Nome da Empresa:</label>
-                <input type="text" id="NomeEmpresa">
-                <br>
-                <label> Nome para Contato:</label>
-                <input type="tel" id="NomeContato" />
-                <br>
-                <label>Telefone:</label>
-                <input type="tel" id="Telefone">
-                <br>
-                <label>E-mail:</label>
-                <input type="email" id="Email" />
-                <br>
-                <label>Endereço:</label>
-                <input type="text" id="Endereco" />
-                <br>
-                <label>Quantidade de Funcionarios total:</label>
-                <input type="number" id="QtdFuncionarios" />
-                <br>
-                <label>Quantidade de Funcionarios presencial:</label>
-                <input type="number" id="QtsPresencial" />
-                <br>
-                <label> Valor do Beneficio </label>
-                <input type="number" id="ValBeneficio" />
-                <br>
-                <label> Prazo para implementação:</label>
-                <input type="date" id="PrazoImplemetacao">
-                <br>
-                <label> Possui oferta de refeitorio no local ?</label>
-                <br>
-                <input type="checkbox" name="Sim" id="OfertaRefeitorioSim">Sim
-                <input type="checkbox" name="Não" id="OfertaRefeitoriNao">Não
-                <br>
-                <label> A regiao possui oferta de Delivery ou restaurantes ?</label>
-                <br>
-                <input type="checkbox" name="Delivery" id="OfertaDelivery">Delivery
-                <input type="checkbox" name="Restaurante" id="OfertaRestaurante" /> Restaurante
-            </form>
+        <div class="Quizpage">
+            <h2><a href="/calculadora.html">Quiz Soluções Customizadas </a></h2>]
         </div>
     </main>
     <footer>
