--- a/index.html
+++ b/index.html
@@ -155,17 +155,20 @@
             <h3>Informacões necessrias para o cálculo</h3>
             
             <form>
-                <label> Contato Comercial </label>
+                <label>Contato Comercial </label>
                 <input type="tel" placeholder="(DD)00000-0000" id="ContatoComercial">
                 <br>
-                <label> (Responsavel) Alelo:</label>
+                <label>Nome do Consultor Alelo:</label>
                 <input type="text" id="AleloName" />
                 <br>
                 <label>Nome da Empresa:</label>
                 <input type="text" id="NomeEmpresa">
                 <br>
-                <label> Nome para Contato:</label>
+                <label>Nome para Contato:</label>
                 <input type="tel" id="NomeContato" />
+                <br>
+                <label>CNPJ:</label>
+                <input type="number" id="cnpj" />
                 <br>
                 <label>Telefone:</label>
                 <input type="tel" id="Telefone">
@@ -182,18 +185,18 @@
                 <label>Quantidade de Funcionarios presencial:</label>
                 <input type="number" id="QtsPresencial" />
                 <br>
-                <label> Valor do Beneficio </label>
+                <label>Valor do Beneficio </label>
                 <input type="number" id="ValBeneficio" />
                 <br>
-                <label> Prazo para implementação:</label>
+                <label>Prazo para implementação:</label>
                 <input type="date" id="PrazoImplemetacao">
                 <br>
-                <label> Possui oferta de refeitorio no local ?</label>
+                <label>Possui oferta de refeitorio no local ?</label>
                 <br>
                 <input type="checkbox" name="Sim" id="OfertaRefeitorioSim">Sim
                 <input type="checkbox" name="Não" id="OfertaRefeitoriNao">Não
                 <br>
-                <label> A regiao possui oferta de Delivery ou restaurantes ?</label>
+                <label>A regiao possui oferta de Delivery ou restaurantes ?</label>
                 <br>
                 <input type="checkbox" name="Delivery" id="OfertaDelivery">Delivery
                 <input type="checkbox" name="Restaurante" id="OfertaRestaurante" /> Restaurante
