arrumei o menu e as fonts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!--Imports fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
 
     <title>Eats For You Calculadora</title>
 </head>
@@ -68,7 +69,7 @@
                     feitas por meio do nosso Aplicativo
                     ou WhatsApp dedicado para o
                     parceiro Alelo.
-                </p>   
+                </p>
             </div>
             <div class="solutions-item">
                 <h3>BAG TOTEM</h3>
@@ -78,11 +79,11 @@
                     BAG e todas suas vantagens.
                     Garantindo o distânciamento social e
                     sistema auto servive.
-                </p> 
-            </div> 
-            
+                </p>
+            </div>
+
             <div class="solutions-item">
-                <h3>EATS LOCKER</h3>  
+                <h3>EATS LOCKER</h3>
                 <img src="/assets/Imagens-com-fundo/eats-locker.png" />
                 <p>
                     Um equipamento que garante o
@@ -105,7 +106,7 @@
                     colaboradores. Com sistema de
                     atendimento feito por um promotor
                     Eats ou auto service.
-                </p>   
+                </p>
             </div>
             <div class="solutions-item">
                 <h3>FOODTRUCK</h3>
@@ -137,27 +138,27 @@
         <div class="solutions-machines">
             <img src="assets/Imagens-com-fundo/eats-machine.png" alt="Eat´s machine" />
             <div class="machines-item">
-            <h3>AQUECIDAS</h3>
-            <p>Máquina de venda automática modelo PASTRU que mantêm as refeições aquecidas. Ideal para parceiros
-                com grande fluxo de colaboradores.
-            </p>
+                <h3>AQUECIDAS</h3>
+                <p>Máquina de venda automática modelo PASTRU que mantêm as refeições aquecidas. Ideal para parceiros
+                    com grande fluxo de colaboradores.
+                </p>
             </div>
 
             <div class="machines-item">
-            <h3>CONGELADAS</h3>
-            <p>Máquina de venda automática que mantêm as
-                refeições congeladas. Ideal para parceiros com fluxo médio de colaboradores e/ou público e queiram
-                garantir cardápio variado.
-            </p>
+                <h3>CONGELADAS</h3>
+                <p>Máquina de venda automática que mantêm as
+                    refeições congeladas. Ideal para parceiros com fluxo médio de colaboradores e/ou público e queiram
+                    garantir cardápio variado.
+                </p>
             </div>
 
             <div class="machines-item">
-            <h3>REFRIGERADAS</h3>
-            <p>Máquina de venda automática modelo PASTRU que mantêm as refeições refrigerada, ideal para parceiros
-                com fluxo médio de colaboradores e/ou público e
-                queiram servir lanches, snacks, sucos, sobremesas e
-                saladas.
-            </p>
+                <h3>REFRIGERADAS</h3>
+                <p>Máquina de venda automática modelo PASTRU que mantêm as refeições refrigerada, ideal para parceiros
+                    com fluxo médio de colaboradores e/ou público e
+                    queiram servir lanches, snacks, sucos, sobremesas e
+                    saladas.
+                </p>
             </div>
         </div>
 
