--- a/calculadora.html
+++ b/calculadora.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--+<!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
@@ -57,4 +57,36 @@
         </form>
     </div>
 </body>
-</html>
+</html> -->
+
+
+<!DOCTYPE html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1. 0">
+    <link href="style-calc.css" rel="stylesheet" />
+    <script src="main.js"></script>
+
+
+</head>
+
+<body>
+
+    <h1>Peeky Placeholders</h1>
+
+    <form>
+        <label>
+            <input id="fname" type="text" placeholder="Name">
+            <span>Name</span>
+        </label>
+
+        <label>
+            <input type="email" placeholder="Email">
+            <span>Email</span>
+        </label>
+
+        <input type="submit" value="Send">
+    </form>
+</body>
