--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
         <div class="container-button">
             <h2>Acesse nossa calculadora já</h2>
-            <button name="button-info">Aperte aqui</button>
+            <button name="button-info"> <a href="./calculadora.html"> Aperte aqui </a></button>
         </div>
     </main>
     <footer>
