--- a/calculadora.html
+++ b/calculadora.html
@@ -1,4 +1,4 @@
-<!--+<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
@@ -57,10 +57,10 @@
         </form>
     </div>
 </body>
-</html> -->
+</html>
 
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
 
 <body>
 
-    <h1>Peeky Placeholders</h1>
+    <h1>Informacões necessrias para o cálculo</h1>
 
     <form>
         <label>
@@ -89,4 +89,4 @@
 
         <input type="submit" value="Send">
     </form>
-</body>
+</body> -->
